[project]
name = "mixgarden"
version = "0.1.0"
description = "Python client for Mixgarden plugins"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mixgarden" }]
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
keywords = ["llm", "ai", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["mixgarden"]
